# u8glob

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Config.cmake.in  LICENSE  README.md  build.sh  config.cmake.in  config.pc.in  install.sh  vcpkg.json
cmake/: CMakeLists.txt  u8glob-config.cmake  u8globConfig.cmake
cmake/helpers/: bincopy.cmake  config.cmake.in  dll_autocopy.cmake  install.cmake
include/u8glob/: glob.hpp  glob_path.hpp  match.hpp
include/u8glob/elements/: any.hpp  range.hpp  star.hpp
install/: CMakeLists.txt  u8globConfig.cmake
src/: glob.cpp  glob_path.cpp
src/elements/: range.cpp
src/u8glob/: glob.cpp  glob_path.cpp
src/u8glob/elements/: range.cpp
test/: CMakeLists.txt  glob.cpp  glob_path.cpp
test/elements/: range.cpp
test/u8glob/: glob.cpp
