include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

set(PKG_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
set(PKG_CONFIG ${PROJECT_NAME}-config.cmake)
set(PKG_VERSION ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake)
set(PKG_TARGETS ${PROJECT_NAME}-targets.cmake)

write_basic_package_version_file(${PKG_VERSION} VERSION ${PROJECT_VERSION} COMPATIBILITY ExactVersion)

install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}_TARGETS LIBRARY FILE_SET HEADERS)
install(EXPORT ${PROJECT_NAME}_TARGETS FILE ${PKG_TARGETS} DESTINATION ${PKG_DIR})
install(FILES ${PKG_CONFIG} ${PKG_VERSION} DESTINATION ${PKG_DIR})
